--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300;400;500;600;700&display=swap');
+
+:root {
+  --base-background-color: #DCE5F2;
+  --active-button-background-color: #9574CD;
+  --disabled-button-background-color: #CFD8DC;
+
+  --main-text-color: #546E7A;
+  --input-text-color: #90A4AE;
+  --active-button-color: #FFFFFF;
+  --disabled-button-color: #90A4AE;
+
+  --error-text-color: #F06292;
+
+  --card-shadow-color-1: rgba(253, 255, 255, 0.8);
+  --card-shadow-color-2: rgba(187, 195, 206, 0.6);
+}
+
+* {
+  color: var(--main-text-color);
+
+  font-family: 'IBM Plex Mono', monospace;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +29,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
+  background-color: var(--base-background-color);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  width: 100vw;
+  height: 100vh;
+}
+
+input {
+  outline: none;
+  border: none;
 }
